@@ -1,43 +1,38 @@
 [Closed Files]
-File_0=SourceModule,'C:\projects\WebKassa\src\Shared\uLkJSON.pas',0,1,1,80,7,0,0
-File_1=SourceModule,'C:\projects\WebKassa\src\Shared\uZintBarcode.pas',0,1,165,2,183,0,0
-File_2=SourceModule,'C:\projects\WebKassa\test\OposWebkassaTest\units\duWebkassaClient.pas',0,1,233,119,260,0,0
-File_3=SourceModule,'C:\projects\WebKassa\src\OposWebkassa\units\WebkassaClient.pas',0,1,1,1,1,0,0
-File_4=SourceModule,'C:\projects\WebKassa\test\OposWebkassaTest\units\duLogFile.pas',0,1,70,42,88,0,0
-File_5=SourceModule,'c:\program files (x86)\borland\delphi7\Comp\TntUnicodeControls\Source\TntSysUtils.pas',0,1,835,1,861,0,0
-File_6=SourceModule,'c:\program files (x86)\borland\delphi7\source\rtl\Sys\system.pas',0,1,13783,20,13800,0,0
-File_7=SourceModule,'C:\projects\WebKassa\src\Shared\LogFile.pas',0,1,1,1,1,0,0
+File_0=SourceModule,'C:\projects\WebKassa\src\OposWebkassa\units\ReceiptItem.pas',0,1,1,22,9,0,0
+File_1=SourceModule,'C:\projects\WebKassa\test\WebkassaAccTest\units\duWebkassaImpl.pas',0,1,393,1,387,0,0
+File_2=SourceModule,'C:\projects\WebKassa\src\OposWebkassa\Units\WebkassaClient.pas',0,1,3395,31,3426,0,0
+File_3=SourceModule,'C:\projects\WebKassa\test\OposWebkassaTest\units\duPrinterParameters.pas',0,1,187,150,193,0,0
+File_4=SourceModule,'C:\projects\WebKassa\src\OposConfig\Fmu\fmuFptrMiscParams.pas',0,1,42,19,60,1,0
+File_5=SourceModule,'C:\projects\WebKassa\src\Shared\PrinterParametersIni.pas',0,1,239,5,253,0,0
+File_6=SourceModule,'C:\projects\WebKassa\src\Shared\PrinterParametersReg.pas',0,1,1,38,12,0,0
 
 [Modules]
-Module0=C:\projects\WebKassa\src\Shared\PosEscPrinter.pas
-Module1=C:\projects\WebKassa\src\OposWebkassa\units\WebkassaImpl.pas
-Module2=C:\projects\WebKassa\test\WebkassaAccTest\units\duWebkassaImpl.pas
-Module3=C:\projects\WebKassa\test\WebkassaAccTest\units\duESCPrinter.pas
+Module0=C:\projects\WebKassa\src\Shared\PrinterTypes.pas
+Module1=C:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas
+Module2=C:\projects\WebKassa\src\Shared\PrinterParameters.pas
+Module3=C:\projects\WebKassa\test\WebkassaAccTest\WebkassaAccTest.dpr
 Count=4
 EditWindowCount=1
 TypeLibWindowCount=1
 
-[C:\projects\WebKassa\src\Shared\PosEscPrinter.pas]
+[C:\projects\WebKassa\src\Shared\PrinterTypes.pas]
 ModuleType=SourceModule
 FormState=0
 FormOnTop=0
 
-[C:\projects\WebKassa\src\OposWebkassa\units\WebkassaImpl.pas]
+[C:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas]
 ModuleType=SourceModule
 FormState=0
 FormOnTop=0
 
-[C:\projects\WebKassa\test\WebkassaAccTest\units\duWebkassaImpl.pas]
-ModuleType=SourceModule
-FormState=0
-FormOnTop=0
-
-[C:\projects\WebKassa\test\WebkassaAccTest\units\duESCPrinter.pas]
+[C:\projects\WebKassa\src\Shared\PrinterParameters.pas]
 ModuleType=SourceModule
 FormState=0
 FormOnTop=0
 
 [C:\projects\WebKassa\test\WebkassaAccTest\WebkassaAccTest.dpr]
+ModuleType=SourceModule
 FormState=0
 FormOnTop=0
 
@@ -81,8 +76,8 @@ MessageView=MessageView@EditWindow0
 Create=1
 Visible=1
 State=2
-Left=374
-Top=138
+Left=474
+Top=277
 Width=1302
 Height=682
 MaxLeft=-8
@@ -95,36 +90,36 @@ LeftPanelSize=0
 LeftPanelClients=CodeExplorer@EditWindow0
 LeftPanelData=00000400010000000C000000436F64654578706C6F7265720000000000000000000000000000000000FFFFFFFF
 RightPanelSize=0
-BottomPanelSize=0
+BottomPanelSize=196
 BottomPanelClients=MessageView@EditWindow0
-BottomPanelData=00000400010000000B0000004D6573736167655669657700000000000000000000000000000000000100000000000000000B0000004D65737361676556696577FFFFFFFF
+BottomPanelData=000004000000000000000000000000000000000000000000000100000000000000000B0000004D65737361676556696577FFFFFFFF
 
 [View0]
-Module=C:\projects\WebKassa\test\WebkassaAccTest\units\duESCPrinter.pas
-CursorX=59
-CursorY=90
-TopLine=73
+Module=C:\projects\WebKassa\test\WebkassaAccTest\WebkassaAccTest.dpr
+CursorX=71
+CursorY=16
+TopLine=1
 LeftCol=1
 
 [View1]
-Module=C:\projects\WebKassa\test\WebkassaAccTest\units\duWebkassaImpl.pas
-CursorX=29
-CursorY=137
-TopLine=116
+Module=C:\projects\WebKassa\src\Shared\PrinterParameters.pas
+CursorX=1
+CursorY=704
+TopLine=695
 LeftCol=1
 
 [View2]
-Module=C:\projects\WebKassa\src\OposWebkassa\units\WebkassaImpl.pas
+Module=C:\projects\WebKassa\src\OposWebkassa\Units\WebkassaImpl.pas
 CursorX=1
-CursorY=4149
-TopLine=4144
+CursorY=3080
+TopLine=3065
 LeftCol=1
 
 [View3]
-Module=C:\projects\WebKassa\src\Shared\PosEscPrinter.pas
-CursorX=147
-CursorY=773
-TopLine=756
+Module=C:\projects\WebKassa\src\Shared\PrinterTypes.pas
+CursorX=33
+CursorY=53
+TopLine=39
 LeftCol=1
 
 [TypeLibEditWindow0]
@@ -443,7 +438,7 @@ Create=1
 Visible=0
 State=0
 Left=-178
-Top=-6
+Top=-13
 Width=140
 Height=305
 MaxLeft=-1
@@ -456,17 +451,17 @@ Dockable=1
 
 [MessageView@EditWindow0]
 Create=1
-Visible=0
+Visible=1
 State=0
 Left=12
 Top=0
 Width=1908
-Height=282
+Height=196
 MaxLeft=-1
 MaxTop=-1
 ClientWidth=1908
-ClientHeight=282
-TBDockHeight=282
+ClientHeight=196
+TBDockHeight=196
 LRDockWidth=443
 Dockable=1
 
@@ -493,5 +488,5 @@ DockClients=CallStackWindow
 DockSiteData=0000040000000000F501000000000000015803000000000000010000000087000000000000000100000002F5010000000000000200000000580300000F00000043616C6C537461636B57696E646F770200000000F7010000000000000100000000080100000000000001000000008C010000000000000100000000100200000000000001000000009802000000000000FFFFFFFF
 
 [ActiveProject]
-ActiveProject=6
+ActiveProject=3
 
