@@ -57,7 +57,7 @@ TestCashOut=0
 TestZReport=0
 TestXReport=0
 TestNonFiscal=0
-TestFiscalReceipt=1
+TestFiscalReceipt=0
 TestFiscalReceipt2=0
 TestFiscalReceipt3=0
 TestFiscalReceiptWithVAT=0
