@@ -6,6 +6,14 @@
 
 *******************************************************************
 
+  OposWebKassa_0.68.exe
+  12 июля 2024 20:30
+  
+  [-] Исправлена ошибка метода Claim
+  [-] Исправлена ошибка метода SetDeviceEnabled
+  
+*******************************************************************
+
   OposWebKassa_0.67.exe
   3 июля 2024 15:30
   
